# battery-analyser

./: .gitattributes  .gitignore  .readthedocs.yaml  mkdocs.yml  pyproject.toml  test.py  test.sh  train.ipynb
battery_analyser/: model.tflite  predict.py
battery_analyser/model/: fingerprint.pb  keras_metadata.pb  saved_model.pb
battery_analyser/model/variables/: variables.data-00000-of-00001  variables.index
battery_analyser/model_01/: fingerprint.pb  keras_metadata.pb  saved_model.pb
battery_analyser/model_01/variables/: variables.index
docs/: index.md
docs/api/: battery_analyser.md
docs/stylesheets/: extra.css
training/: capture_dataset.py  crop.py  crop.sh  metadata.py  run.sh  train.ipynb
