[tool.poetry]
name = "battery-analyser"
version = "0.2.0"
description = ""
authors = ["Thiago Paiva <thiagohdaqw@gmail.com>"]
readme = "README.md"
packages = [{include = "battery_analyser"}]
license = "MIT"
classifiers = [
    "Intended Audience :: Education",
    "Natural Language :: Portuguese (Brazilian)",
    "Development Status :: 1 - Planning",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering :: Image Recognition",
]

[tool.poetry.urls]
"Documentação" = "https://battery-analyser.readthedocs.io"
"Código" = "https://github.com/Estacao-pilhas-pi2/battery-analyser"

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
numpy = ">=1.20.0"
tflite-support = ">=0.4.2"
protobuf = ">=3.18.0,<4"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
pytest-coverage = "^0.0"
blue = "^0.9.1"
isort = "^5.12.0"
taskipy = "^1.10.4"
jupyterlab = "^3.6.3"
matplotlib = "^3.7.1"

[tool.poetry.group.doc.dependencies]
mkdocs-material = "^9.1.11"
mkdocstrings = "^0.21.2"
mkdocstrings-python = "^0.10.1"


[tool.poetry.group.dev-gpu.dependencies]
nvidia-cudnn-cu11 = "^8.9.1.23"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = "."

[tool.isort]
profile = "black"
line_length = 79

[tool.taskipy.tasks]
lint = "blue --check --diff . && isort --check --diff ."
doc = "mkdocs serve"
pre_test = "task lint"
test = "pytest -s -x --cov=battery_analyser -vv"
post_test = "coverage html"
notebook = "jupyter-lab --collaborative --port 3030"
