[tool.poetry]
name = "battery-analyser"
version = "0.2.1"
description = ""
authors = ["Thiago Paiva <thiagohdaqw@gmail.com>"]
readme = "README.md"
packages = [{include = "battery_analyser"}]
license = "MIT"
classifiers = [
    "Intended Audience :: Education",
    "Natural Language :: Portuguese (Brazilian)",
    "Development Status :: 1 - Planning",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering :: Image Recognition",
]

[tool.poetry.urls]
"Documentação" = "https://battery-analyser.readthedocs.io"
"Código" = "https://github.com/Estacao-pilhas-pi2/battery-analyser"

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
numpy = ">=1.20.0"
tflite-support = ">=0.4.2"
protobuf = ">=3.18.0,<4"

[tool.poetry.group.doc.dependencies]
mkdocs-material = "^9.1.11"
mkdocstrings = "^0.21.2"
mkdocstrings-python = "^0.10.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = "."

[tool.isort]
profile = "black"
line_length = 79
